Add Unit 1 Task 1, Modify Sidebar
+Add always-present sidebar button
+Add unit 1 task 1 content
+Update sidebar content

--- a/Source_Code/Basic_Nav_Prototype/u1.html
+++ b/Source_Code/Basic_Nav_Prototype/u1.html
@@ -95,10 +95,11 @@
 				<li>
 				<a class="accordion-toggle in" data-toggle="collapse" data-target="#u1"><Strong>Unit 1 Magic Carpet Ride  <b class="caret"></b></strong></a>
 				   <p class="collapse" id="u1">
-						<a href="#" title="Title"> - Task 1: Working in R^2</a>
-						<a href="#" title="Title"> - Task 2: Working in R^2</a>
-						<a href="#" title="Title"> - Task 3: Working in R^3</a>
-						<a href="#" title="Title"> - Task 4: Moving Towards R^n</a>
+				   		<a href="u1.html" title="Title"><strong> - Unit 1 Summary</strong></a>
+						<a href="u1t1.html" title="Title">- Task 1: The Carpet Ride Problem</a>
+						<a href="#" title="Title"> - Task 2: Hide and Seek</a>
+						<a href="#" title="Title"> - Task 3: Getting Back Home</a>
+						<a href="#" title="Title"> - Task 4: Linear (In)dependence</a>
 				   </p>
                 </li>		
 				<li>
@@ -158,7 +159,7 @@
 			</ul>
 		</ul>
 		
-		<h2>Task 2: Working in $R^2$</h2>
+		<h2><a href="u1t1.html">Task 2: Working in $R^2$</a></h2>
 		<ul>
 		<a class="btn btn-default" data-toggle="collapse" data-target="#t2">More Information &raquo;</a>
 			<ul class="collapse" id = "t2">
@@ -180,7 +181,7 @@
 			</ul>
 		</ul>
 
-		<h2>Task 3: Working in $R^3$</h2>
+		<h2><a href="u1t1.html">Task 3: Working in $R^3$</a></h2>
 		<ul>
 		<a class="btn btn-default" data-toggle="collapse" data-target="#t3">More Information &raquo;</a>
 			<ul class="collapse" id = "t3">
@@ -202,7 +203,7 @@
 			</ul>
 		</ul>
 		
-		<h2>Task 4: Moving Towards $R^n$</h2>
+		<h2><a href="u1t1.html">Task 4: Moving Towards $R^n$</a></h2>
 		<ul>
 		<a class="btn btn-default" data-toggle="collapse" data-target="#t4">More Information &raquo;</a>
 			<ul class="collapse" id = "t4">
