--- a/Source_Code/Basic_Nav_Prototype/mockup.html
+++ b/Source_Code/Basic_Nav_Prototype/mockup.html
@@ -71,7 +71,16 @@
 		  </div>
 		</div>
     </div>
-	
+		<a style="display:block" href="#sidr">
+		<div id="float">
+			<br>
+			<span class="glyphicon glyphicon-resize-horizontal"></span>
+			<span class="bottomaligned">
+				<span class="glyphicon glyphicon-resize-horizontal"></span>
+			</span>
+		</div>
+	</a>
+
 	
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
@@ -80,14 +89,15 @@
 	  
 		<div id="sidr">
 			<ul>
-				<a class="btn pull-right" id="simple" href="#sidr"> << </a>
 				<li>
-				<a class="accordion-toggle in" href="content_demo.html" data-toggle="collapse" data-target="#u1">Unit 1 Magic Carpet Ride  <b class="caret"></b></a>
+				<a class="accordion-toggle in" data-toggle="collapse" data-target="#u1">Unit 1 Magic Carpet Ride  <b class="caret"></b></a>
 				   <p class="collapse" id="u1">
-						<a href="#" title="Title"> - Task 1: Working in R^2</a>
-						<a href="#" title="Title"> - Task 2: Working in R^2</a>
-						<a href="#" title="Title"> - Task 3: Working in R^3</a>
-						<a href="#" title="Title"> - Task 4: Moving Towards R^n</a>
+				   		<a href="u1.html" title="Title">- Unit 1 Summary</a>
+						<a href="u1t1.html" title="Title"> - Task 1: The Carpet Ride Problem</a>
+						<a href="#" title="Title"> - Task 2: Hide and Seek</a>
+						<a href="#" title="Title"> - Task 3: Getting Back Home</a>
+						<a href="#" title="Title"> - Task 4: Linear (In)dependence</a>
+
 				   </p>
                 </li>		
 				<li>
@@ -177,6 +187,9 @@
 	<script>
 	$(document).ready(function() {
 	$('#simple-menu').sidr({ speed : 50 });
+	});
+		$(document).ready(function() {
+	$('#float').sidr();
 	});
 	</script>
 		<script>
