Create custom CSS file; Add a few custom button colors
+Move custom CSS to iola.css
+Experimenting with button colors; custom buttons added

--- a/Source_Code/Basic_Nav_Prototype/mockup.html
+++ b/Source_Code/Basic_Nav_Prototype/mockup.html
@@ -11,6 +11,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/iola.css" rel="stylesheet">	
 	<link rel="stylesheet" href="js/sidr/stylesheets/jquery.sidr.light.css">
 
 
@@ -65,7 +66,7 @@
 				<div class="form-group">
 				  <input type="password" placeholder="Password" class="form-control">
 				</div>
-				<button type="submit" class="btn btn-success">Sign in</button>
+				<button type="submit" class="btn btn-warning">Sign in</button>
 			  </form>
 			</div><!--/.navbar-collapse -->
 		  </div>
