--- a/Source_Code/Basic_Nav_Prototype/u1.html
+++ b/Source_Code/Basic_Nav_Prototype/u1.html
@@ -11,6 +11,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/iola.css" rel="stylesheet">
 	<link rel="stylesheet" href="js/sidr/stylesheets/jquery.sidr.light.css">
 
 
@@ -64,7 +65,7 @@
 				<div class="form-group">
 				  <input type="password" placeholder="Password" class="form-control">
 				</div>
-				<button type="submit" class="btn btn-success">Sign in</button>
+				<button type="submit" class="btn btn-warning">Sign in</button>
 			  </form>
 			</div><!--/.navbar-collapse -->
 		  </div>
@@ -137,7 +138,7 @@
 			<div class="accordion" id="summary">		  
 				<h2><a href="u1t1.html">Task 1: The Carpet Ride Problem (Working in $R^2$)</a></h2>
 				<ul>
-					<a class="btn btn-warning" data-toggle="collapse" data-parent="#parent" data-target="#t1">More Information <span class="glyphicon glyphicon-chevron-down"></span></a>
+					<a class="btn btn-gray" data-toggle="collapse" data-parent="#parent" data-target="#t1">More Information <span class="glyphicon glyphicon-chevron-down"></span></a>
 					<div class="accordion-body collapse" id = "t1">
 						<ul>
 							<blockquote>
@@ -164,7 +165,7 @@
 		
 				<h2><a href="u1t1.html">Task 2: Hide and Seek (Working in $R^2$)</a></h2>
 				<ul>
-					<a class="btn btn-warning" data-toggle="collapse" data-target="#t2">More Information <span class="glyphicon glyphicon-chevron-down"></span></a>
+					<a class="btn btn-tan" data-toggle="collapse" data-target="#t2">More Information <span class="glyphicon glyphicon-chevron-down"></span></a>
 					<div class="accordion-body collapse" id = "t2">
 						<ul>
 							<blockquote>
@@ -188,7 +189,7 @@
 
 				<h2><a href="u1t1.html">Task 3: Getting Back Home (Working in $R^3$)</a></h2>
 				<ul>
-					<a class="btn btn-warning" data-toggle="collapse" data-target="#t3">More Information <span class="glyphicon glyphicon-chevron-down"></span></a>
+					<a class="btn btn-blue" data-toggle="collapse" data-target="#t3">More Information <span class="glyphicon glyphicon-chevron-down"></span></a>
 					<div class="accordion-body collapse" id = "t3">
 						<ul>
 							<blockquote>
@@ -212,7 +213,7 @@
 		
 				<h2><a href="u1t1.html">Task 4: Linear [In]dependence (Moving Towards $R^n$)</a></h2>
 				<ul>
-					<a class=" btn btn-warning" data-toggle="collapse" data-target="#t4">More Information <span class="glyphicon glyphicon-chevron-down"></span></a>
+					<a class=" btn btn-orange" data-toggle="collapse" data-target="#t4">More Information <span class="glyphicon glyphicon-chevron-down"></span></a>
 					<div class="accordion-body collapse" id = "t4">
 						<ul>
 							<blockquote>
