--- a/Source_Code/Basic_Nav_Prototype/u1t1.html
+++ b/Source_Code/Basic_Nav_Prototype/u1t1.html
@@ -11,6 +11,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/iola.css" rel="stylesheet">	
 	<link rel="stylesheet" href="js/sidr/stylesheets/jquery.sidr.light.css">
 
 
@@ -64,7 +65,7 @@
 				<div class="form-group">
 				  <input type="password" placeholder="Password" class="form-control">
 				</div>
-				<button type="submit" class="btn btn-success">Sign in</button>
+				<button type="submit" class="btn btn-warning">Sign in</button>
 			  </form>
 			</div><!--/.navbar-collapse -->
 		  </div>
@@ -134,7 +135,7 @@
 				<a class="btn btn-warning center" data-toggle="collapse" data-target="#t1">Lesson Overview &raquo;</a>
 		</h2>
 		
-			<ul class="collapse" id = "t1">
+			<ul class="collapse" id = "t1" >
 				<blockquote>
 				<p class="lead" >Goal is to develop students' familiarity with the language, notation, and graphical representations for linear combinations of vectors (and connections to linear systems).</p>
 				<p>By the end of the lesson students should be able to:</p>
@@ -157,7 +158,7 @@
 		<br>
 		
 		<ul>
-			<a class="btn btn-info center" href="#print">Print Lesson</a>
+			<a class="btn btn-gray center" href="#print">Print Lesson</a>
 		</ul>
 		
 		<ul>
