--- a/Source_Code/Basic_Nav_Prototype/u1t1.html
+++ b/Source_Code/Basic_Nav_Prototype/u1t1.html
@@ -17,6 +17,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/jumbotron.css" rel="stylesheet">
+	<link href="css/carousel.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -193,7 +194,73 @@
 					<blockquote>
 						It is not immediately obvious to students that Old Man Gauss can be reached by riding the magic carpet forward for 17 hours and the hover board forward for 30 hours, so there is a substantial amount of mathematical work for students to do just with this initial task.  Below are 6 examples of student work.  
 						<br><br>
-						<div class="paragraphs">
+
+						<!-- Carousel
+						================================================== -->
+						<div id="myCarousel" class="carousel slide">
+						  <!-- Indicators -->
+						  <div class="carousel-inner">
+							<div class="item active">
+							  <img src="img/u1t1/1.png" alt="Student thinking 1">
+							  <div class="container">
+								<div class="carousel-caption">
+								  <p><em>Guess and check</em> method: (1/6)</p>
+									This group began by using the hoverboard 10 hours at a time. After iterating this 10-hour journey three times and recognizing that this got them to a location of 90 miles E and 30 units N, they determined that riding the magic carpet for 17 additional hours would allow them to arrive at their desired destination of 107 miles E and 64 miles N.
+								</div>
+							  </div>
+							</div>
+							<div class="item">
+							  <img src="img/u1t1/2.jpg"/ alt="Student thinking 2">
+							  <div class="container">
+								<div class="carousel-caption">
+								  <p><em>Guess and check via vector weighting method:</em>  (2/6)</p>
+									This group wrote a vector equation (but with 'fraction-like' notation). They determined the weights that each vector would need so the East and North components would sum to 107 and 64, respectively. They included a graphical representation where the weighted vectors are depicted tip-to-tail.
+								</div>
+							  </div>
+							</div>
+							<div class="item">
+							  <img src="img/u1t1/3.png"/ alt="Student thinking 3">
+							  <div class="container">
+								<div class="carousel-caption">
+								  <p><em>Systems of equations</em> method: (3/6)</p>
+									This group defined variables ($t1$ and $t2$) for the amount of time spent on each mode of transportation and represented the problem using a system of equations. They used elimination to solve the system and drew a diagram to indicate the journey corresponding to their solution. In their diagram they used right triangles to illustrate the component parts of each vector that made up their journey to Gauss's cabin and included a dashed line to depict the resultant vector. 																	</div>
+							  </div>
+							</div>
+							<div class="item">
+							  <img src="img/u1t1/4.png"/ alt="Student thinking 4">
+							  <div class="container">
+								<div class="carousel-caption">
+								  <p><em>Vector equation becomes a system</em> method:  (4/6)</p>
+									This group began by representing the problem using a vector equation. They rewrote the vector equation as a system of equations, which they solved. Finally, they depicted the journey corresponding to their solution with vectors drawn tip-to-tail. They also included a depiction of the resultant vector.									
+								</div>
+							  </div>
+							</div>
+							<div class="item">
+							  <img src="img/u1t1/5.jpg"/ alt="Student thinking 5">
+							  <div class="container">
+								<div class="carousel-caption">
+								  <p>Noticing <em>net times</em>:  (5/6)</p>
+									This group's made use of a vector equation becomes a systems of equation approach.  They summarized their conclusion by stating, Solution: Use H. Board for 30 hrs and F. Carpet for 17 hrs (these are net times). The mention of the solution representing net time can be leveraged during whole class discussion to a conversation about unique solutions.									
+								</div>
+							  </div>
+							</div>
+							<div class="item">
+							  <img src="img/u1t1/6.jpg"/ alt="Student thinking 6">
+							  <div class="container">
+								<div class="carousel-caption">
+								  <p><em>Two different paths</em>:  (6/6)</p>
+									This group makes use of horizontal notation for vectors, a practice students may be familiar with from previous calculus classes. Additionally, the sketch of the problem scenario is color-coded, with red notating the hover board's travel and purple notating the magic carpet's travel.  The group sketch both sides of a parallelogram, representing that one could ride the hover board first and then the magic carpet (the lower half of the parallelogram) or vice versa (the upper half). This could be leveraged in a discussion about unique solutions.									
+								</div>
+							  </div>
+							</div>
+
+							</div>
+						  <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+						  <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+						</div><!-- /.carousel -->					
+
+						<!-- NON-CAROUSEL STUDENT THINKING: MAY BE BETTER SUITED FOR MOBILE-->
+						<!--div class="paragraphs">
 							<div class="row">
 								<div class="span4">
 									<div class="clearfix content-heading">
@@ -225,7 +292,7 @@
 		  
 								</div>
 							</div>
-						</div>
+						</div-->						
 					</blockquote>
 				</ul>
 			</div>
@@ -243,7 +310,7 @@
 					<li>How to interpret the movement along $<3, 1>$ and what it looks like graphically (i.e., graphing the vector $<3, 1>$ emanating from the origin)</li>
 					<li>What it means to ride a mode of transportation for different integer and non-integer periods of time (in forward and reverse) to establish allowable scalars</li>
 					<br>
-					<a class="btn btn-default center" data-toggle="collapse" data-target="#t5">Example Discussion Questions &raquo;</a>
+					<a class="btn btn-warning center" data-toggle="collapse" data-target="#t5">Example Discussion Questions &raquo;</a>
 					<br>
 						<div class="accordion-body collapse" id = "t5"">
 							<ul>
@@ -265,7 +332,7 @@
 
 				</ul>
 				<br><br>
-				<a class="btn btn-default center" data-toggle="collapse" data-target="#i1">Discussing Strategies and Answers During Whole Class Discussion &raquo;</a>
+				<a class="btn btn-blue center" data-toggle="collapse" data-target="#i1">Discussing Strategies and Answers During Whole Class Discussion &raquo;</a>
 				<br>
 				<div class="accordion-body collapse" id = "i1" ">
 					<ul>
@@ -282,7 +349,7 @@
 				</div>
 				<br><br>
 
-				<a class="btn btn-default center" data-toggle="collapse" data-target="#i2">Working in small groups towards a solution  &raquo;</a>
+				<a class="btn btn-blue center" data-toggle="collapse" data-target="#i2">Working in small groups towards a solution  &raquo;</a>
 				<br>
 				<div class="accordion-body collapse" id = "i2" ">
 					<ul>
@@ -326,7 +393,7 @@
 				</div>
 				<br><br>					
 				
-				<a class="btn btn-default center" data-toggle="collapse" data-target="#i3">Discussing Graphical Representations during Whole Class Discussion &raquo;</a>
+				<a class="btn btn-blue center" data-toggle="collapse" data-target="#i3">Discussing Graphical Representations during Whole Class Discussion &raquo;</a>
 				<br>
 				<div class="accordion-body collapse" id = "i3" ">
 					<ul>
@@ -338,7 +405,7 @@
 							If possible, find boards of students who graphed the vector equation associated with the Magic Carpet Problem. This probably would resemble a tip-to-tail method. An explicit discussion about where the various parts of the vector equation "appear" in the graph is beneficial in connecting the graphical and algebraic approaches.
 							<br><br>
 							<ul>
-								<a class="btn btn-default center" data-toggle="collapse" data-target="#t6">Example Discussion Question &raquo;</a>
+								<a class="btn btn-warning center" data-toggle="collapse" data-target="#t6">Example Discussion Question &raquo;</a>
 								<br>
 								<div class="accordion-body collapse" id = "t6"">
 									<ul>
@@ -361,7 +428,7 @@
 							Because systems of equations are not the main focus of this unit, pursuing this graphical interpretation isn't necessary.  However, if students produce this graph or many are focused on systems of equations, it provides a nice way to connect to and honor their thinking. 
 							<br><br>
 							<ul>
-							<a class="btn btn-default center" data-toggle="collapse" data-target="#t7">Example Discussion Question &raquo;</a>
+							<a class="btn btn-warning center" data-toggle="collapse" data-target="#t7">Example Discussion Question &raquo;</a>
 							<br>
 							<div class="accordion-body collapse" id = "t7"">
 								<ul>
@@ -382,7 +449,7 @@
 				</div>
 				<br><br>					
 
-				<a class="btn btn-default center" data-toggle="collapse" data-target="#i4">Discussing the notion of solution &raquo;</a>
+				<a class="btn btn-blue center" data-toggle="collapse" data-target="#i4">Discussing the notion of solution &raquo;</a>
 				<br>
 				<div class="accordion-body collapse" id = "i4" ">
 					<ul>
@@ -393,7 +460,7 @@
 							The final two example discussion questions focus on the notion of solution - more specifically, on the idea of uniqueness of solutions.
 							<br><br>
 							<ul>
-							<a class="btn btn-default center" data-toggle="collapse" data-target="#t8">Example Discussion Question &raquo;</a>
+							<a class="btn btn-warning center" data-toggle="collapse" data-target="#t8">Example Discussion Question &raquo;</a>
 							<br>
 							<div class="accordion-body collapse" id = "t8" >
 								<ul>
@@ -412,7 +479,7 @@
 							<br>
 
 							<ul>
-								<a class="btn btn-default center" data-toggle="collapse" data-target="#t9">Example Discussion Question &raquo;</a>
+								<a class="btn btn-warning center" data-toggle="collapse" data-target="#t9">Example Discussion Question &raquo;</a>
 								<br>
 								<div class="accordion-body collapse" id = "t9" style="background-color:#F8F8F8;">
 									<ul>
@@ -518,10 +585,16 @@
 	<!-- Automatically open sidebar -->
 	<script>
 	function init(){
-	$('#simple-menu').sidr({ speed : 50 });
+	$('#simple-menu').sidr({ speed : 0 });
 	$.sidr('open', 'sidr');
 	$('#u1').collapse("hide"); <!--Auto-open Unit 1 sidebar link -->
 	}
+	
+	$('.carousel').carousel(
+{
+pause: true,
+interval: false
+});
 	</script>
   </body>
 </html>
