Change LaTex font size
+ Change math font size, for a more clear presentation

--- a/Source_Code/Basic_Nav_Prototype/u1t1.html
+++ b/Source_Code/Basic_Nav_Prototype/u1t1.html
@@ -527,7 +527,7 @@
 										This group's approach seems similar to the previous one. They first found that $107 \div 3=35\frac{2}{3}$ and wrote, "didn't divide evenly." This is not further explained, but the calculations "$64 \times 3 = 192$" and "$64 \times 1 = 64$" most likely were used to support that claim. For the magic carpet, the group found that $64 \div 2=32$ (so the amount of time on the hover board would be 32 hours), but that $1 \times 32 = 32$ not $107$; thus, a rider "did not make the trip North" by using only the magic carpet for 32 hrs. The group did a similar calculation (but no explanation) with the magic carpet dealing with 107 as primary. 									<br><br>
 										<img class="pull-right" src="img/u1t1/s4.jpg"/ height="300" width="300" hspace="20">
 										<br><br>
-										This group's justification for the claim that you cannot reach Gauss states explicitly that there exists no real number $c$ such that $c \begin{bmatrix} 3 \\ 1 \end{bmatrix} = \begin{bmatrix} 107 \\ 64 \end{bmatrix} or c\begin{bmatrix} 1 \\ 2 \end{bmatrix}=\begin{bmatrix} 107 \\ 64 \end{bmatrix}$. The group did not include algebraic justification to support how they knew this was true.								</div>
+										This group's justification for the claim that you cannot reach Gauss states explicitly that there exists no real number $c$ such that $c \begin{bmatrix} 3 \\ 1 \end{bmatrix} = \begin{bmatrix} 107 \\ 64 \end{bmatrix}$ or $c\begin{bmatrix} 1 \\ 2 \end{bmatrix}=\begin{bmatrix} 107 \\ 64 \end{bmatrix}$. The group did not include algebraic justification to support how they knew this was true.								</div>
 		  
 								</div>
 							</div>
@@ -553,8 +553,13 @@
     <!-- Placed at the end of the document so the pages load faster -->
 	<script type="text/x-mathjax-config">
 	MathJax.Hub.Config({
-	  tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
-	});
+		tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+		});
+	MathJax.Hub.Config({
+		"HTML-CSS": {
+		scale: 85       // change font scale
+		}
+	});	
 	</script>
 	<script type="text/javascript"
 			src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
