--- a/Source_Code/Basic_Nav_Prototype/u1.html
+++ b/Source_Code/Basic_Nav_Prototype/u1.html
@@ -90,7 +90,6 @@
 		<div class="jumbotron">
 			<div id="sidr" class="hidden-print">
 				<ul>
-					<a class="btn pull-right hidden-print" id="simple" href="#sidr"> << </a>
 					<li>
 					<a class="accordion-toggle in" data-toggle="collapse" data-target="#u1"><Strong>Unit 1 Magic Carpet Ride  <b class="caret"></b></strong></a>
 					   <p class="collapse" id="u1">
@@ -269,7 +268,12 @@
     <!-- Placed at the end of the document so the pages load faster -->
 	<script type="text/x-mathjax-config">
 	MathJax.Hub.Config({
-	  tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+		tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+		});
+	MathJax.Hub.Config({
+		"HTML-CSS": {
+		scale: 85       // change font scale
+		}
 	});
 	</script>
 	<script type="text/javascript"
