--- a/Source_Code/Basic_Nav_Prototype/mockup.html
+++ b/Source_Code/Basic_Nav_Prototype/mockup.html
@@ -95,9 +95,9 @@
 				   <p class="collapse" id="u1">
 				   		<a href="u1.html" title="Title">- Unit 1 Summary</a>
 						<a href="u1t1.html" title="Title"> - Task 1: The Carpet Ride Problem</a>
-						<a href="#" title="Title"> - Task 2: Hide and Seek</a>
-						<a href="#" title="Title"> - Task 3: Getting Back Home</a>
-						<a href="#" title="Title"> - Task 4: Linear (In)dependence</a>
+						<a href="u1t2.html" title="Title"> - Task 2: Hide and Seek</a>
+						<a href="u1t1.html" title="Title"> - Task 3: Getting Back Home</a>
+						<a href="u1t1.html" title="Title"> - Task 4: Linear (In)dependence</a>
 
 				   </p>
                 </li>		
