--- a/Source_Code/Basic_Nav_Prototype/u1.html
+++ b/Source_Code/Basic_Nav_Prototype/u1.html
@@ -14,7 +14,6 @@
 	<link href="css/iola.css" rel="stylesheet">
 	<link rel="stylesheet" href="js/sidr/stylesheets/jquery.sidr.light.css">
 
-
     <!-- Custom styles for this template -->
     <link href="css/jumbotron.css" rel="stylesheet">
 
@@ -95,9 +94,9 @@
 					   <p class="collapse" id="u1">
 							<a href="u1.html" title="Title"><strong> - Unit 1 Summary</strong></a>
 							<a href="u1t1.html" title="Title">- Task 1: The Carpet Ride Problem</a>
-							<a href="#" title="Title"> - Task 2: Hide and Seek</a>
-							<a href="#" title="Title"> - Task 3: Getting Back Home</a>
-							<a href="#" title="Title"> - Task 4: Linear (In)dependence</a>
+							<a href="u1t2.html" title="Title"> - Task 2: Hide and Seek</a>
+							<a href="u1t1.html" title="Title"> - Task 3: Getting Back Home</a>
+							<a href="u1t1.html" title="Title"> - Task 4: Linear (In)dependence</a>
 					   </p>
 					</li>		
 					<li>
@@ -162,7 +161,7 @@
 					</div>
 				</ul>
 		
-				<h2><a href="u1t1.html">Task 2: Hide and Seek (Working in $R^2$)</a></h2>
+				<h2><a href="u1t2.html">Task 2: Hide and Seek (Working in $R^2$)</a></h2>
 				<ul>
 					<a class="btn btn-tan" data-toggle="collapse" data-target="#t2">More Information <span class="glyphicon glyphicon-chevron-down"></span></a>
 					<div class="accordion-body collapse" id = "t2">
