--- a/Source_Code/Basic_Nav_Prototype/u1t1.html
+++ b/Source_Code/Basic_Nav_Prototype/u1t1.html
@@ -95,7 +95,7 @@
 				   <p class="collapse" id="u1">
 				   		<a href="u1.html" title="Title"> - Unit 1 Summary</a>
 						<a href="u1t1.html" title="Title"><strong> - Task 1: The Carpet Ride Problem</strong></a>
-						<a href="#" title="Title"> - Task 2: Hide and Seek</a>
+						<a href="u1t2.html" title="Title"> - Task 2: Hide and Seek</a>
 						<a href="#" title="Title"> - Task 3: Getting Back Home</a>
 						<a href="#" title="Title"> - Task 4: Linear (In)dependence</a>
 				   </p>
